# Go-Atlas-Engine

./: .gitignore  CMakeLists.txt  README.md  gobuild.py  postbuild.ps1  postbuild.py  postbuild.sh  vsbuild.bat
cwrapper/: App.cpp  App.h  CMakeLists.txt  LibraryWrapper.cpp  Wrapper.h  cWindow.cpp  cWindow.h
cwrapper/engine/: .gitignore  CMakeLists.txt
cwrapper/engine/dependencies/Glad/: CMakeLists.txt
cwrapper/engine/dependencies/Hidapi/: CMakeLists.txt
cwrapper/engine/src/: Engine.cpp
cwrapper/src/: App.cpp  LibraryWrapper.cpp  LibraryWrapper.h  cWindow.cpp  cWindow.h
engine/: CMakeLists.txt
engine/src/renderer/: OceanRenderer.cpp
go/: App.so~  app.go  main.go  main.h
go/gui/: README.md  Window.go
gowrapper/: Window.go
src/: App.cpp  App.h
